maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: missing arguments for method aMurSud in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		if(!aMurSud){
                    ^JediEscaper:18: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurNord){
                         ^JediEscaper:21: error: missing arguments for method aMurEst in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurEst){
                         ^JediEscaper:24: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurOuest){
                         ^